styles/navMenu.css
.bodyDarkMode {
    background-color: #0D0D0E;
    color: #F1F1EF;
}

.headerContainer {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.header {
    padding: 25px;
    padding-bottom: 15px;
    font-weight: 400;
    top: 0;
    right: 0;
    left: 0;
    position: fixed;
    letter-spacing: -0.01em;
    z-index: 10;
}

.header a {
    margin-top: 0px;
    margin-right: 15px;
    text-decoration: none;
    color: inherit;
    opacity: 0;
}

.header a:after{
    content: '';
    display: block;
    width: 0%;
    height: 2px;
    background-color: #0D0D0E;
    transition: width 0.2s ease-in-out;
    bottom: -3px;
    left: 0;
}

.header a:hover::after {
    width: 100%;
}

.headerDarkMode {
    background-color: #0D0D0E;
}

.headerDarkMode a::after {
    content: '';
    display: block;
    width: 0%;
    height: 2px;
    transition: width 0.2s ease-in-out;
    bottom: -3px;
    left: 0px;
}

.headerDarkMode a:hover::after {
    width: 100%;
}

.navMenu {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    font-size: 1.25em;
}

.toggleButton {
    height: 20px;
    width: 20px;
    background-color: #0D0D0E;
    border: none;
    border-radius: 50%;
    display: inline-block;
    opacity: 0;
    cursor: pointer;
}

.toggleButton.buttonDarkMode {
    background-color: #F1F1EF;
}

.backButton {
    cursor: pointer;
}

/* Smallest screens possible */
@media (min-width: 200px) and (max-width: 299px) and (min-height: 500px) and (max-height: 653px){
    .navMenu{
        font-size: .73em;
    }
    .toggleButton{
        width: 13px;
        height: 13px;
    }
}

/* Samsung Galaxy S8+ */
@media (min-width: 300px) and (max-width: 360px) and (min-height: 654px) and (max-height: 799px){
    .navMenu{
        font-size: 1em;
    }
    .toggleButton{
        width: 16px;
        height: 16px;
    }
}

/* Samsung Phone S20 Ultra */
@media (min-width: 361px) and (max-width: 412px) and (min-height: 800px) and (max-height: 915px){
    .navMenu{
        font-size: 1em;
    }
    .toggleButton{
        height: 18px;
        width: 18px;
    }
}

/* Smaller iPhone screens */
@media (min-width: 380px) and (max-width: 393px) and (min-height: 700px) and (max-height: 851px){
    .navMenu{
        font-size: 1.1em;
    }
    .toggleButton{
        height: 18px;
        width: 18px;
    }
}

/* pre-iPhone 12 */
@media (min-width: 300px) and (max-width: 375px) and (min-height: 500px) and (max-height: 667px){
    .navMenu{
        font-size: .8em;
    }
    .toggleButton{
        height: 16px;
        width: 16px;
    }
}

/* iPhone 12 */
@media (min-width: 376px) and (max-width: 414px) and (min-height: 668px) and (max-height: 895px){
    .navMenu{
        font-size: .7em !important;
    }
    .toggleButton{
        height: 18px;
        width: 18px;
    }
}

/* iPhone XR */
@media (min-width: 391px) and (max-width:500px) and (min-height: 852px) and (max-height: 900px ){
    .navMenu{
        font-size: 1.2em;
    }
    .toggleButton{
        height: 18px;
        width: 18px;
    }
}

